L3G4200D Arduino Library 1.3.0 / 12.01.2014
======================================================================

 * Pitch, Roll and Yaw example
 * Read temperature example
 * Possibly set Output Data Range and Bandwidth in begin() method
 * New getOdrBw() method
 * New getScale() method
 * New getThreshold() method
 * Delay(5) in calibration method for better bias
 * Update processing example for Pitch, Roll and Yaw

L3G4200D Arduino Library 1.2.0 / 07.01.2014
======================================================================

 * More clean up code & standardize data types
 * Fixing I2c communication

L3G4200D Arduino Library 1.1.0 / 06.01.2014
======================================================================

 * Support for Arduino < 1.0 and >= 1.0
 * Check WHO_AM_I register during initialization
 * Blinking LED13 indicator for processing example
 * Waiting for initialization in examples
 * Clean up code

L3G4200D Arduino Library 1.0.0 / 05.01.2014
======================================================================

 * First release