@@ -1,7 +1,7 @@
 /*
 L3G4200D.h - Header file for the L3G4200D Triple Axis Gyroscope Arduino Library.
 
-Version: 1.3.0
+Version: 1.3.1
 (c) 2014 Korneliusz Jarzebski
 www.jarzebski.pl
 
@@ -69,33 +69,33 @@ struct Vector
 
 typedef enum
 {
-    L3G4200D_2000DPS = 0b10,
-    L3G4200D_500DPS  = 0b01,
-    L3G4200D_250DPS  = 0b00
+    L3G4200D_SCALE_2000DPS = 0b10,
+    L3G4200D_SCALE_500DPS  = 0b01,
+    L3G4200D_SCALE_250DPS  = 0b00
 } dps_t;
 
 typedef enum
 {
-    L3G4200D_800HZ_110  = 0b1111,
-    L3G4200D_800HZ_50   = 0b1110,
-    L3G4200D_800HZ_35   = 0b1101,
-    L3G4200D_800HZ_30   = 0b1100,
-    L3G4200D_400HZ_110  = 0b1011,
-    L3G4200D_400HZ_50   = 0b1010,
-    L3G4200D_400HZ_25   = 0b1001,
-    L3G4200D_400HZ_20   = 0b1000,
-    L3G4200D_200HZ_70   = 0b0111,
-    L3G4200D_200HZ_50   = 0b0110,
-    L3G4200D_200HZ_25   = 0b0101,
-    L3G4200D_200HZ_12_5 = 0b0100,
-    L3G4200D_100HZ_25   = 0b0001,
-    L3G4200D_100HZ_12_5 = 0b0000
+    L3G4200D_DATARATE_800HZ_110  = 0b1111,
+    L3G4200D_DATARATE_800HZ_50   = 0b1110,
+    L3G4200D_DATARATE_800HZ_35   = 0b1101,
+    L3G4200D_DATARATE_800HZ_30   = 0b1100,
+    L3G4200D_DATARATE_400HZ_110  = 0b1011,
+    L3G4200D_DATARATE_400HZ_50   = 0b1010,
+    L3G4200D_DATARATE_400HZ_25   = 0b1001,
+    L3G4200D_DATARATE_400HZ_20   = 0b1000,
+    L3G4200D_DATARATE_200HZ_70   = 0b0111,
+    L3G4200D_DATARATE_200HZ_50   = 0b0110,
+    L3G4200D_DATARATE_200HZ_25   = 0b0101,
+    L3G4200D_DATARATE_200HZ_12_5 = 0b0100,
+    L3G4200D_DATARATE_100HZ_25   = 0b0001,
+    L3G4200D_DATARATE_100HZ_12_5 = 0b0000
 } odrbw_t;
 
 class L3G4200D
 {
     public:
-	bool begin(dps_t scale = L3G4200D_2000DPS, odrbw_t odrbw = L3G4200D_100HZ_12_5);
+	bool begin(dps_t scale = L3G4200D_SCALE_2000DPS, odrbw_t odrbw = L3G4200D_DATARATE_100HZ_12_5);
 	dps_t getScale(void);
 	odrbw_t getOdrBw(void);
 
